<resources>
  <string name="app_name" translatable="false">AI Edge</string>

  <string name="bottom_nav_page_chat">Chat</string>
  <string name="bottom_nav_page_agent">Agent</string>
  <string name="bottom_nav_page_explore">Explore</string>
  <string name="bottom_nav_page_vision">Vision</string>
  <string name="bottom_nav_page_meeting">Meeting</string>
  <string name="bottom_nav_page_model">Model</string>
</resources>